--- a/IC/w2c2/layout.css
+++ b/IC/w2c2/layout.css
@@ -1,8 +1,8 @@
 body {background-color: black;}
 header, nav, #content, footer {border:1px solid grey;}
-h1 {color: dodgerblue;}
-h3 {color: green;}
-p, th, td, li, dl, ul, ol, form {color: white;}
-aside {position: absolute; left: 0; width: 25%}
-#content {position: relative; left: 25%; width: 75%;}
+h1 {font-family: 'Shadows Into Light', serif; font-size: 48px; color: ghostwhite;}
+h3 {font-family: 'Shadows Into Light', serif; color: green;}
+p, th, td, li, dl, ul, ol, form {font-family: 'Shadows Into Light', serif; color: white;}
+aside {font-family: 'Shadows Into Light', serif; position: absolute; left: 0; width: 25%}
+#content {font-family: 'Shadows Into Light', serif; position: relative; left: 25%; width: 75%;}
 footer {text-align: center; bottom: 0;}
