--- a/A06/layout.css
+++ b/A06/layout.css
@@ -1,3 +1,5 @@
-header, nav, div, footer {border:1px solid grey;}
-h1 {font-family: 'Shadows Into Light', serif; font-size: 48px;}
-h2, h3 {font-family: 'Shadows Into Light', serif;}
+body {background-color: black !important;}
+header, nav, div, footer {border:1px solid ghostwhite;}
+h1 {font-family: 'Shadows Into Light', serif !important; font-size: 48px; color: ghostwhite !important;}
+h2, h3 {font-family: 'Shadows Into Light', serif !important; color: ghostwhite !important;}
+p, div {color: ghostwhite !important;}
